--- a/templates/email/invitation.html
+++ b/templates/email/invitation.html
@@ -9,18 +9,21 @@
 {% endblock %}
 
 {% block content %}
-<p>Hello,</p>
+<p>
+{% if invitation.into_discussion %}{{invitation.from_user}} is inviting you to join the discussion {{invitation.into_discussion.title}} at GovReady Q.
+{% elif invitation.into_task_editorship %}{{invitation.from_user}} is inviting you to take over editing {{invitation.into_task_editorship.title}} at GovReady Q.
+{% elif invitation.into_new_task_module_id %}{{invitation.from_user}} is inviting you to complete the module {{invitation.into_new_task_module_title}} at GovReady Q.
+{% else %}{{invitation.from_user}} is inviting you to collaborate on {{invitation.from_project.title}} at GovReady Q.
+{% endif %}
+</p>
 
-<p>{{from_user}} is requesting your help completing a module at GovReady Q.</p>
+<blockquote>{{invitation.text}}</blockquote>
 
-<blockquote>{{message}}</blockquote>
+<p>To accept the invitation and help {{invitation.from_user}}, please follow the following link:<p>
 
-<p>To accept the invitation and help {{from_user}}, please follow the following link:</p>
+<p><a href="{{invitation.get_acceptance_url}}">{{invitation.get_acceptance_url}}</a></p>
 
-<p><a href="{{accept_url}}">{{accept_url}}</a></p>
-
-<p>{{from_user}} will appreciate it!</p>
+<p>{{invitation.from_user}} will appreciate it!</p>
 
 <p>Thank you,</p>
-
 {% endblock %}
