more work on invitations

--- a/templates/home.html
+++ b/templates/home.html
@@ -81,7 +81,7 @@ Welcome
                 (<a onclick="$('#invite-user-select').val('__me__'); invite_toggle_mode()">back</a>)
               </label>
               <br>
-              <input id="invite-user-email" class="form-control" name="email" type="email" placeholder="person@your-agency.gov">
+              <input id="invite-user-email" class="form-control" name="email" type="email" placeholder="person@your-agency.gov" style="width: 25em;">
             </div>
             <div id="invite-message-container" style="display: none">
               <p style="margin-top: 1em">Include a message about why you are sending this invitation:</p>
