use Markdown to specify the body of invitation emails, now that I added that functionality in if-then-fund/django_html_email, so that we could be more DRY (this gets rid of the separate HTML email template)

--- a/templates/email/template.html
+++ b/templates/email/template.html
@@ -3,14 +3,15 @@
 {% block head %}
 <style>
 #backgroundTable {
-	background-color: blue;
-	color: white;
+	background-color: white;
+	color: black;
+	font-family: sans-serif;
 }
 #content-area {
-	padding: 1em;
+	padding: .5em;
 }
 a {
-	color: #262;
+	color: #23A;
 }
 </style>
 {% block extra_head %}
