--- a/templates/home.html
+++ b/templates/home.html
@@ -56,8 +56,27 @@ Welcome
       {# can only start a new module within a project #}
       <hr>
 
-      <script>var project_invitation_info_{{item.project.id}} = {{item.send_invitation|safe}};</script>
-      <p><button class="btn btn-primary" onclick="show_invite_modal({{item.project.id}}, '{{item.project.title|escapejs}}', project_invitation_info_{{item.project.id}}, 'Can you give me a hand completing a module for {{item.project.title}}?')">Start Module</button></p>
+      <form class="form-inline" method="get" action="/tasks/start" onsubmit="if ($('#start-module-{{item.project.id}}').val() == '') { alert('Select a module.'); return false; }">
+        <input type="hidden" name="project" value="{{item.project.id}}"/>
+        {% csrf_token %}
+        <div class="form-group" style="margin-right: 1em">
+          <label for="start-module-{{item.project.id}}">Start answering a new module...</label>
+          <br>
+          <select id="start-module-{{item.project.id}}" class="form-control" name="module">
+            <option value="">Select...</option>
+            {% for m in item.startable_modules %}
+              <option value="{{m.id}}">{{m.title}}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="form-group" style="margin-right: 1em">
+          <script>var project_invitation_info_{{item.project.id}} = {{item.send_invitation|safe}};</script>
+          <label></label>
+          <br>
+          <button type="submit" class="btn btn-primary">Start Module</button>
+          <button class="btn btn-warning" onclick="return invite_user_to_start_module(project_invitation_info_{{item.project.id}});">Invite to Answer ...</button>
+        </div>
+      </form>
 
     {% else %}
       <p><a href="/tasks/new-project">Start a New Project</a></p>
@@ -75,18 +94,11 @@ Welcome
         <h4 class="modal-title" id="invitation_modal_title">Start a Module (<span></span>)</h4>
       </div>
       <div class="modal-body">
-        <p>Start a new module.</p>
-        <form method="get" action="/tasks/start" class="form-inline" onsubmit="return send_invitation()">
+        <p style="margin: 1.5em 0 2em 0">Hmm text here.</p>
+        <form class="form" onsubmit="return send_invitation()">
             {% csrf_token %}
-            <input type="hidden" name="project" value=""/>
             <div class="form-group" style="margin-right: 1em">
-              <label for="invite-module">Module</label>
-              <br>
-              <select id="invite-module" class="form-control" name="module">
-              </select>
-            </div>
-            <div class="form-group" style="margin-right: 1em">
-              <label for="invite-user-select">Answered By</label>
+              <label for="invite-user-select">Select user to invite</label>
               <br>
               <select id="invite-user-select" class="form-control" name="user" onchange="invite_toggle_mode()">
               </select>
@@ -94,19 +106,19 @@ Welcome
             <div class="form-group" style="margin-right: 1em; display: none">
               <label for="invite-user-email">
                 Invite by Email
-                (<a onclick="$('#invite-user-select').val('__me__'); invite_toggle_mode()">back</a>)
+                (<a onclick="$('#invite-user-select').val(''); invite_toggle_mode()">back</a>)
               </label>
               <br>
               <input id="invite-user-email" class="form-control" name="email" type="email" placeholder="person@your-agency.gov" style="width: 25em;">
             </div>
-            <div id="invite-message-container" style="display: none">
-              <p style="margin-top: 1em">Include a message about why you are sending this invitation:</p>
+            <div id="invite-message-container" style="margin-top: 1em">
+              <label for="invite-message">Include a message about why you are sending this invitation:</label>
               <textarea id="invite-message" class="form-control" style="width: 100%; height: 4em"></textarea>
             </div>
             <div id="invite-addtoteam-container" style="display: none">
               <div class="checkbox" style="margin-top: 1em">
                 <label>
-                  <input name="add-to-team" type="checkbox"> Add to project team
+                  <input name="add-to-team" type="checkbox"> Add user to project team
                 </label>
               </div>
             </div>
@@ -114,7 +126,7 @@ Welcome
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Nevermind</button>
-        <button type="button" class="btn btn-danger btn-submit" onclick="$('#invitation_modal form').submit()">Start</button>
+        <button type="button" class="btn btn-danger btn-submit" onclick="$('#invitation_modal form').submit()">Invite</button>
       </div>
     </div>
   </div>
@@ -124,20 +136,37 @@ Welcome
 
 {% block extra_body %}
 <script>
-function show_invite_modal(project_id, project_title, info, message_default_text) {
-  var m = $('#invitation_modal');
-  m.find('h4 span').text(project_title)
-  m.find('form input[name=project]').val(project_id);
+function invite_user_to_start_module(info) {
+  var m = $('#start-module-' + info.project_id);
+  if (m.val() == '') {
+    alert('Select a module.');
+    return false;
+  }
 
-  var s = m.find('form select[name=module]');
-  s.text('');
-  info.addable_modules.forEach(function(m) {
-    s.append($("<option/>").attr('value', m.id).text(m.title))
-  })
+  var mt = m.find('option[value=' + m.val() + ']').text();
+
+  show_invite_modal(
+    info.project_title,
+    'Invite a colleague to answer the module ' + mt + '.',
+    info,
+    'Can you give me a hand completing the module ' + mt + ' for ' + info.project_title + '?',
+    {
+      project: info.project_id,
+      into_new_task_module_id: m.val()
+    });
+
+  return false;
+}
+
+var invite_modal_extra_data = { };
+function show_invite_modal(project_title, prompt, info, message_default_text, data) {
+  var m = $('#invitation_modal');
+  m.find('h4 span').text(project_title);
+  m.find('p').text(prompt);
 
   var s = m.find('form select[name=user]');
   s.text('');
-  s.append($("<option/>").attr('value', '__me__').text("Myself"))
+  s.append($("<option/>").attr('value', '').text('Select team member...'))
   info.users.forEach(function(user) {
     s.append($("<option/>").attr('value', user.id).text(user.name))
   })
@@ -146,30 +175,18 @@ function show_invite_modal(project_id, project_title, info, message_default_text
 
   $('#invite-message').text(message_default_text);
 
+  invite_modal_extra_data = data;
+
   m.modal();
 }
 function invite_toggle_mode() {
   var m = ($('#invite-user-select').val() == '__invite__'); // inviting by email
-  var n = ($('#invite-user-select').val() != '__me__'); // inviting (user or email)
   $('#invite-user-select').parent().toggle(!m);
   $('#invite-user-email').parent().toggle(m);
-  $('#invite-message-container').toggle(n);
   $('#invite-addtoteam-container').toggle(m);
-  $('#invitation_modal .btn-submit').text(!n ? "Start" : "Invite");
 }
 function send_invitation(form) {
-  // If the user will be filling out the module themself, then
-  // do regular form submission.
-  if ($('#invite-user-select').val() == '__me__')
-    return true;
-
-  // Otherwise, do an AJAX submit to send the invitation.
-  $('#invitation_modal').modal('hide');
-  ajax_with_indicator({
-   url: '{% url "send_invitation" %}',
-   method: "POST",
-   data: {
-     project: $('#invitation_modal form input[name=project]').val(),
+  var data = {
      //prompt_task
      //prompt_question_id
      add_to_team: $('#invitation_modal form input[name=add-to-team]').attr('checked') != null ? "1" : "0",
@@ -179,7 +196,14 @@ function send_invitation(form) {
      user_id: $('#invite-user-select').is(":visible") ? $('#invite-user-select').val() : null,
      user_email: $('#invite-user-email').is(":visible") ? $('#invite-user-email').val() : null,
      message: $('#invite-message').val()
-   },
+  };
+  for (var k in invite_modal_extra_data)
+    data[k] = invite_modal_extra_data[k];
+  $('#invitation_modal').modal('hide');
+  ajax_with_indicator({
+   url: '{% url "send_invitation" %}',
+   method: "POST",
+   data: data,
    success: function(res) {
      // status == error is handled by ajax_with_indicator
      show_modal_error("Send Invitation", "The invitation has been sent. We will notify you when the invitation has been accepted.", function() { window.location.reload() })
