--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -46,10 +46,10 @@ GOVREADY Q
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="invitation_modal_title">Start a Module (<span></span>)</h4>
+        <h4 class="modal-title" id="invitation_modal_title">...</h4>
       </div>
       <div class="modal-body">
-        <p style="margin: 1.5em 0 2em 0">Hmm text here.</p>
+        <p style="margin: 1em 0 2em 0">Hmm text here.</p>
         <form class="form" onsubmit="return send_invitation()">
             {% csrf_token %}
             <div class="form-group" style="margin-right: 1em">
