--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -1,6 +1,6 @@
-{% extends "site_base.html" %}
+{% extends "base.html" %}
 
-{% block head_title %}
+{% block title %}
 {{m.title}}
 {% endblock %}
 
@@ -37,7 +37,4 @@
 </div>
 
 
-{% endblock %}
-
-{% block scripts %}
 {% endblock %}
