--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,18 @@
-{% extends "site_base.html" %}
+{% extends "base.html" %}
 
-{% block head_title %}
-GovReady
+{% block title %}
+GovReady Q
 {% endblock %}
 
-{% block body %}
-<h1><a href="/account/login/">LOG IN...</a></h1>
+{% block body-wide %}
 
-{% endblock %}
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Welcome to GovReady Q</h1>
+        <p>We&rsquo;ll help you answer questions and produce a document.</p>
+        <p><a class="btn btn-primary btn-lg" role="button" href="{% url 'login' %}">Log in &raquo;</a></p>
+      </div>
+    </div>
 
-{% block extra_body %}
+	{{ block.super }} 
 {% endblock %}
