--- a/templates/new-project.html
+++ b/templates/new-project.html
@@ -1,8 +1,8 @@
-{% extends "site_base.html" %}
+{% extends "base.html" %}
 {% load bootstrap %}
 
-{% block head_title %}
-New Project - GovReady
+{% block title %}
+New Project
 {% endblock %}
 
 {% block body %}
