show invitation info on the module finished page too

--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -4,6 +4,8 @@
 {{m.title}}
 {% endblock %}
 
+{% include "task-status.html" %}
+
 {% block body %}
 <h1>{{task.title}}</h1>
 {% if task.title != m.title %}
