--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
             body {
                 padding-top: 50px;
                 padding-bottom: 20px;
+                font-size: 16px;
             }
         </style>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
